@@ -273,5 +273,12 @@
  *    <td>Define to disable VTARGET sampling and reporting on AVR models with an ADC converter. This will cause the programmer
  *        to report a fixed 5V target voltage to the host regardless of the real target voltage.</td>  
  *   </tr>
+ *   <tr>
+ *    <td>WIN_LIBUSB_COMPAT</td>
+ *    <td>Makefile CDEFS</td>
+ *    <td>Define to switch to a non-standard endpoint scheme, breaking compatibility with AVRStudio under Windows but making
+ *        the code compatible with Windows builds of avrdude using the libUSB driver. Linux platforms are not affected by this
+ *        option.
+ *   </tr>
  *  </table>
  */
