@@ -199,6 +199,7 @@ CDEFS += -DENABLE_ISP_PROTOCOL
 CDEFS += -DENABLE_XPROG_PROTOCOL
 #CDEFS += -DXPROG_VIA_HARDWARE_USART
 #CDEFS += -DNO_VTARGET_DETECT
+#CDEFS += -DWIN_LIBUSB_COMPAT
 
 
 # Place -D or -U options here for ASM sources
