@@ -202,6 +202,8 @@ CDEFS += -DAUX_LINE_PIN=PINB
 CDEFS += -DAUX_LINE_DDR=DDRB
 CDEFS += -DAUX_LINE_MASK="(1 << 4)"
 CDEFS += -DVTARGET_ADC_CHANNEL=2
+#CDEFS += -DLIBUSB_FILTERDRV_COMPAT
+
 
 # Place -D or -U options here for ASM sources
 ADEFS = -DF_CPU=$(F_CPU)
